Fix word processing events and add regenerate loaders
