# packages/types/src/api/topic/put.ts
@@ -1,3 +1,4 @@
 import { paths } from "../../api";
 
-export type PutTopicResponse = paths["/topic"]["put"]["responses"]["200"]["content"]["application/json"];
+export type PutTopicResponse =
+	paths["/topic"]["put"]["responses"]["200"]["content"]["application/json"];
